kubernetes/dvmn-django-clearsessions.yml
apiVersion : v1
kind: Pod
metadata:
  name: django-clearsessions
  labels:
    app: django
    owner: malykh
spec:
  containers:
  - name: clearsessions
    image: django_app:for_k8s
    command: ['sh', '-c','python manage.py clearsessions']
  restartPolicy: OnFailure
