kubernetes/dvmn_django_app.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django
    owner: malykh
spec:
  selector:
    matchLabels:
      project: dvmn-k8s
  template:
    metadata:
      labels:
        project: dvmn-k8s
    spec:
      containers:
      - name: db
        image: postgres:12.0-alpine
        ports:
          - containerPort: 5432
      - name: web
        image: django_app:for_k8s
        ports:
          - containerPort: 80
