kubernetes/dvmn-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvmn-ingress
spec:
  rules:
    - host: star-burger.test
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: django-app
                port:
                  number: 80
